Fix gap

--- a/src/sass/_imageSearch.scss
+++ b/src/sass/_imageSearch.scss
@@ -7,7 +7,6 @@ img {
   display: block;
   width: 100%;
   height: 250px;
-  object-fit: cover;
 }
 
 .header {
@@ -64,7 +63,6 @@ img {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  gap: 40px;
 }
 
 .info-item {
